{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 444,
  "lineage": "7844872c-0336-7fc9-be3f-89482e91c78b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07caf09b362be10b8",
            "arn": "arn:aws:ec2:us-east-1:975049900198:instance/i-0a03c7f0fc2e61246",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a03c7f0fc2e61246",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeyproject",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0045e4fb16a3e29d7",
            "private_dns": "ip-10-1-0-57.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.57",
            "public_ip": "54.211.22.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "IAC": "Terraform",
                  "IAC_Version": "1.7.0",
                  "cloud": "AWS",
                  "env": "dev",
                  "owner": "Santiago",
                  "project": "cerberus",
                  "region": "virginia"
                },
                "throughput": 125,
                "volume_id": "vol-001360c3c52d0f791",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d5f75f17139dc81",
            "tags": {
              "Name": "apache-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "apache-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago",
              "project": "cerberus",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07172e047f412ae94"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.virginia_vpc2",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049900198:internet-gateway/igw-0c2cd531017c27923",
            "id": "igw-0c2cd531017c27923",
            "owner_id": "975049900198",
            "tags": {
              "Name": "Internet gw virginia2-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "Internet gw virginia2-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0ab093e18564b5f15"
          },
          "dependencies": [
            "aws_vpc.virginia_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049900198:route-table/rtb-0e0c980c72a9a49f5",
            "id": "rtb-0e0c980c72a9a49f5",
            "owner_id": "975049900198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2cd531017c27923",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public crt-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "Public crt-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab093e18564b5f15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.virginia_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crt_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079f7f430d58da165",
            "route_table_id": "rtb-0e0c980c72a9a49f5",
            "subnet_id": "subnet-03d5f75f17139dc81"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.virginia_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049900198:security-group/sg-07172e047f412ae94",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07172e047f412ae94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "975049900198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance SG-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "Public Instance SG-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab093e18564b5f15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.virginia_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049900198:subnet/subnet-096671e678d2cca2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096671e678d2cca2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049900198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "Private subnet-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0ab093e18564b5f15"
          },
          "dependencies": [
            "aws_vpc.virginia_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049900198:subnet/subnet-03d5f75f17139dc81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d5f75f17139dc81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975049900198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "Public subnet-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0ab093e18564b5f15"
          },
          "dependencies": [
            "aws_vpc.virginia_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "virginia_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975049900198:vpc/vpc-0ab093e18564b5f15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f243cb92d08217f5",
            "default_route_table_id": "rtb-052ea806541ee6088",
            "default_security_group_id": "sg-045a888cc4a7ab117",
            "dhcp_options_id": "dopt-0d408c13f74b977f8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab093e18564b5f15",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052ea806541ee6088",
            "owner_id": "975049900198",
            "tags": {
              "Name": "main virginia2-cerberus-dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.7.0",
              "Name": "main virginia2-cerberus-dev-virginia",
              "cloud": "AWS",
              "env": "dev",
              "owner": "Santiago",
              "project": "cerberus",
              "region": "virginia"
            }
          }
        }
      ]
    }
  ]
}